unpackaged/objects/Account_Create_Change_Request__c.object
<CustomObject>
  <fields>
    <fullName>AccountCountry__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_2_digit</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_Fax__c</fullName>
    <label>Account Fax</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Account_Name__c</fullName>
    <inlineHelpText>Be sure to fill this in if this is a new Account!</inlineHelpText>
    <label>Account Name (Practice Name)</label>
    <length>76</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Name_only_if_New__c</fullName>
    <label>Account Name (only if New)</label>
    <length>76</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_OneSF_ID__c</fullName>
    <formula>Existing_Account__r.OneSF_Id__c</formula>
    <label>Account OneSF ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Phone_Number__c</fullName>
    <label>Account Phone Number</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Account_Record_Type_if_Existing__c</fullName>
    <formula>CASE( Existing_Account__r.RecordTypeId ,"01220000000DiSB", "Clinical Customer","01220000000DiSf", "Clinical Prospect","0120J000000cmd3", "DNA Distributor","0120J000000cmcy", "DNA End User","0120J000000cmd8", "DNA Internal","OTHER")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type if Existing</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>Account_Type</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Approval_Status__c</fullName>
    <formula>CASE( Status__c , "Created", IMAGE("/resource/1444678382000/NACAMPSTATUSSUBMIT",
 "Not Submitted",120,215), 
"Submitted",IMAGE("/resource/1444678335000/NACAMPSTATUSPENDING", "Submitted",90,170), 
"Processing",IMAGE("/resource/1444678335000/NACAMPSTATUSPENDING", "Submitted",90,170), 
"Completed",IMAGE("/resource/1444678363000/NACAMPSTATUSAPPROVED", "Completed",70,70),
"Rejected", Image("/resource/1444678681000/NACAMPREJECTED", "Rejected", 50,120),"UNKNOWN")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ChangedOrganisationNumber__c</fullName>
    <formula>if( or(ISBLANK( Existing_Account__c ),
ISBLANK(  OrganisationNumber__c  )),false,
if( OrganisationNumber__c &lt;&gt;  Old_OrganisationNumber__c  ,True,False))</formula>
    <label>Changed Organisation Number</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Account_Name__c</fullName>
    <formula>If( or(ISBLANK( Existing_Account__c ),ISBLANK(Account_Name__c )),false,if( Account_Name__c &lt;&gt;  Old_Account_Name__c ,True,False))</formula>
    <label>Changed Account Name</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Account_Type__c</fullName>
    <formula>If( or(ISBLANK( Existing_Account__c ),ISBLANK(text(Account_Type__c))),false, if(text(Account_Type__c) &lt;&gt; text(Existing_Account__r.OneAccount_Type__c),True,False))</formula>
    <label>Changed Account Type</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Address__c</fullName>
    <formula>if( or(ISBLANK( Existing_Account__c ),CompleteVisitingAddress__c==", , , , ") ,False,
IF( or(
Country__c &lt;&gt; Old_BillingCountry__c ,
Postal_Zip_Code__c&lt;&gt; Old_BillingPostalCode__c ,
City__c&lt;&gt; Old_BillingCity__c ,
StreetAddress__c &lt;&gt; Old_BillingStreet__c ,
State_Province__c &lt;&gt; Old_BillingState__c ),
True,False))</formula>
    <label>Changed Address</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Parent_Account__c</fullName>
    <formula>if(or( ISBLANK( Existing_Account__c ),isblank( Parent_Account__c )),False, if( Parent_Account__r.Id &lt;&gt;  Existing_Account__r.Parent.Id  , True,False))</formula>
    <label>Changed Parent Account</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Phone__c</fullName>
    <formula>If( or(ISBLANK( Existing_Account__c ),
ISBLANK( Account_Phone_Number__c  )),false,
if(  Account_Phone_Number__c &lt;&gt;  Old_Phone__c  ,True,False))</formula>
    <label>Changed Phone</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Changed_Specialty__c</fullName>
    <formula>If(
OR(ISBLANK( Existing_Account__c ),ISBLANK(text(Specialty__c))), false, 
if(text(Specialty__c) &lt;&gt; Old_Specialty__c ,True,False)
)</formula>
    <label>Changed Specialty</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CimId__c</fullName>
    <formula>TEXT(Existing_Account__r.CIM360Id__c)</formula>
    <label>Cim Id</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>CompleteBillingAddress__c</fullName>
    <formula>ShippingStreet__c &amp; ", " &amp; ShippingCity__c &amp; ", " &amp;  ShippingState__c &amp; ", " &amp; ShippingPostalCode__c &amp; ", " &amp; ShippingCountry__c</formula>
    <label>TODEL_Complete Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CompleteVisitingAddress__c</fullName>
    <formula>StreetAddress__c &amp; ", " &amp; City__c &amp; ", " &amp;  State_Province__c &amp; ", " &amp; Postal_Zip_Code__c &amp; ", " &amp; Country__c</formula>
    <label>Complete Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <description>To set the Country of the Account Requested</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Created_By_TERR_ID__c</fullName>
    <formula>CreatedBy.Movex_Uer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By TERR ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Direct_Reports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <label>Created by My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_SBU__c</fullName>
    <formula>CreatedBy.User_SBU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by SBU</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Created_by_me__c</fullName>
    <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
    <label>Created by me</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CreatorTeam__c</fullName>
    <formula>TEXT(CreatedBy.Team__c)</formula>
    <label>Creator Team</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Country__c</fullName>
    <formula>text(CreatedBy.User_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CurrencyISOCode__c</fullName>
    <description>New currency code that the account should have</description>
    <label>Account Currency</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Currency_ISO_Codes</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Create_Change_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Identity_Management_Notes_on_Account__c</fullName>
    <label>Identity Management Notes on Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>MethodofPayement__c</fullName>
    <label>Method of Payment</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_AccountCountry__c</fullName>
    <label>Old Account Country</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_Account_Name__c</fullName>
    <description>Original Account Name during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Account Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_Account_Type__c</fullName>
    <label>Old Account Type</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_BillingCity__c</fullName>
    <description>Original City during creation of the Change Request. [ACR 2.0]</description>
    <label>Old City</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_BillingCountry__c</fullName>
    <description>Original Country during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Country</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_BillingPostalCode__c</fullName>
    <description>Original Postal Code during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_BillingState__c</fullName>
    <description>Original State during creation of the Change Request. [ACR 2.0]</description>
    <label>Old State/Province</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_BillingStreet__c</fullName>
    <description>Original Street during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Street</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_CurrencyIsoCode__c</fullName>
    <description>Original CurrencyIsoCode during creation of the Change Request. [ACR 2.0]</description>
    <label>Old CurrencyIsoCode</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_OrganisationNumber__c</fullName>
    <label>Old Organisation Number</label>
    <length>32</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Requests (Old Parent Account)</relationshipLabel>
    <relationshipName>Account_RequestsParentAcc</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Old_Phone__c</fullName>
    <description>Original Phone during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Phone</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_Postal_Code_Info__c</fullName>
    <description>Original Postal Code Info during creation of the Change Request. [ACR 2.0]</description>
    <label>Old Postal Code Info</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ShippingCity__c</fullName>
    <description>Original ShippingCity during creation of the Change Request. [ACR 2.0]</description>
    <label>TODEL_Old City</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ShippingCountry__c</fullName>
    <description>Original ShippingCountry during creation of the Change Request. [ACR 2.0]</description>
    <label>TODEL_Old Country</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ShippingPostalCode__c</fullName>
    <description>Original ShippingPostalCode during creation of the Change Request. [ACR 2.0]</description>
    <label>TODEL_Old Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ShippingState__c</fullName>
    <description>Original ShippingState during creation of the Change Request. [ACR 2.0]</description>
    <label>TODEL_Old State/Province</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_ShippingStreet__c</fullName>
    <description>Original ShippingStreet during creation of the Change Request. [ACR 2.0]</description>
    <label>TODEL_Old Street</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Old_Specialty__c</fullName>
    <label>Old Specialty</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>OrganisationNumber__c</fullName>
    <label>Organisation Number</label>
    <length>32</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Requests (Parent Account)</relationshipLabel>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Pending_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PlaceofResidency__c</fullName>
    <label>Place of Residency (If Resident)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Postal_Zip_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Practitioner_ID_NPI_in_US__c</fullName>
    <label>Practitioner ID (NPI in US)</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Request__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account Info Change</fullName>
        </value>
        <value>
          <fullName>Account Linking CIM360</fullName>
        </value>
        <value>
          <fullName>All Stop</fullName>
        </value>
        <value>
          <fullName>Create New Account</fullName>
        </value>
        <value>
          <fullName>Parent/Child Grouping</fullName>
        </value>
        <value>
          <fullName>Pending Order</fullName>
        </value>
        <value>
          <fullName>Reopen Account</fullName>
        </value>
        <value>
          <fullName>Sales Issue</fullName>
        </value>
        <value>
          <fullName>Account Linking</fullName>
          <isActive>false</isActive>
          <label>Account Linking</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account Change Request</fullName>
        </value>
        <value>
          <fullName>Account Creation Request</fullName>
          <default>true</default>
          <label>Account Creation Request</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ShippingCity__c</fullName>
    <description>ACR 2.0</description>
    <label>TODEL_City</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ShippingCountry__c</fullName>
    <description>ACR 2.0</description>
    <label>TODEL_Country</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ShippingPostalCode__c</fullName>
    <description>ACR 2.0</description>
    <label>TODEL_Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ShippingState__c</fullName>
    <description>ACR 2.0</description>
    <label>TODEL_State/Province</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ShippingStreet__c</fullName>
    <description>ACR 2.0</description>
    <label>TODEL_Street</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Account_Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Air Force</fullName>
        </value>
        <value>
          <fullName>Army</fullName>
        </value>
        <value>
          <fullName>B2B/Indirect</fullName>
        </value>
        <value>
          <fullName>B2C/Direct</fullName>
        </value>
        <value>
          <fullName>Branch</fullName>
        </value>
        <value>
          <fullName>Bureau of Indian Affairs</fullName>
        </value>
        <value>
          <fullName>Coast Guard</fullName>
        </value>
        <value>
          <fullName>Community College</fullName>
        </value>
        <value>
          <fullName>Community Dental Health</fullName>
        </value>
        <value>
          <fullName>Competitor</fullName>
        </value>
        <value>
          <fullName>Corporate</fullName>
        </value>
        <value>
          <fullName>Correctional Facility</fullName>
        </value>
        <value>
          <fullName>Country</fullName>
        </value>
        <value>
          <fullName>Crown &amp; Bridge Laboratory</fullName>
        </value>
        <value>
          <fullName>Dealer Sell Out Data Region</fullName>
        </value>
        <value>
          <fullName>Dental Association</fullName>
        </value>
        <value>
          <fullName>Dental Clinic</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory</fullName>
        </value>
        <value>
          <fullName>Dental Office</fullName>
        </value>
        <value>
          <fullName>Dental School</fullName>
        </value>
        <value>
          <fullName>Dental Specialist</fullName>
        </value>
        <value>
          <fullName>Dental Technician School</fullName>
        </value>
        <value>
          <fullName>Dentsply</fullName>
        </value>
        <value>
          <fullName>DentsplySirona</fullName>
        </value>
        <value>
          <fullName>Denture Clinic</fullName>
        </value>
        <value>
          <fullName>Denture Laboratory</fullName>
        </value>
        <value>
          <fullName>Denturists</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Discontinued</fullName>
        </value>
        <value>
          <fullName>Distributor</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>State_License_Number__c</fullName>
    <description>Used in North America to capture the state license number of a contact, similar to an NPI number</description>
    <label>State License Number</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>State_Licensure__c</fullName>
    <label>State Licensure</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>States_North_America</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Created</fullName>
          <default>true</default>
          <label>Created</label>
        </value>
        <value>
          <fullName>Submitted</fullName>
        </value>
        <value>
          <fullName>Processing</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Rejected</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>StreetAddress__c</fullName>
    <label>Street</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SubmitForApproval__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Submits the Change Request for Approval if checked</description>
    <inlineHelpText>Submits the Change Request for Approval if checked</inlineHelpText>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>User_Country__c</fullName>
    <defaultValue>CASE($User.User_Country__c,  
"Australia","Australia",
"Austria","Austria",
"Belarus","Belarus",
"Belgium","Belgium",
"Brazil","Brazil",
"Canada", "Canada",
"China","China",
"Denmark","Denmark",
"Finland","Finland",
"France","France",
"Germany","Germany",
"Holland","Holland",
"Hong Kong","Hong Kong",
"India","India",
"Indonesia","Indonesia",
"Italy","Italy",
"Japan","Japan",
"Kazakhstan","Kazakhstan",
"Luxembourg","Luxembourg",
"Malaysia","Malaysia",
"New Zealand","New Zealand",
"Norway","Norway",
"Philippines","Philippines",
"Portugal","Portugal",
"Poland","Poland",
"Russia","Russia",
"Saudi Arabia","Saudi Arabia",
"Singapore","Singapore",
"Slovakia","Slovakia",
"South Africa","South Africa",
"South Korea","South Korea",
"Spain","Spain",
"Sweden","Sweden",
"Switzerland","Switzerland",
"Taiwan","Taiwan",
"Thailand","Thailand",
"Turkey","Turkey",
"UAE","UAE",
"UK", "UK",
"Ukraine", "Ukraine",
"USA","USA",
"Vietnam","Vietnam",
"HQ: SE")</defaultValue>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_full</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>YearofGraduation_studentAccts__c</fullName>
    <label>Year of Graduation (Student Accts)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>isPORequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO required on orders</label>
    <type>Checkbox</type>
  </fields>
  <label>Account Request</label>
  <listViews>
    <fullName>ANZ_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>ANZ: Account Maintenance Team</label>
    <queue>ANZ_Account_Maintenance_Team</queue>
    <sharedTo>
      <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Acct_MaintenancePendingACRs</fullName>
    <columns>Creator_Country__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Type__c</columns>
    <columns>Comments__c</columns>
    <columns>Created_by_SBU__c</columns>
    <columns>Created_By_TERR_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>notEqual</operation>
      <value>Created,Completed,Rejected</value>
    </filters>
    <filters>
      <field>Approval_Status__c</field>
      <operation>notEqual</operation>
      <value>Rejected</value>
    </filters>
    <filters>
      <field>Request_Type__c</field>
      <operation>equals</operation>
      <value>All Stop,Create New Account,Pending Order</value>
    </filters>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>USA,Canada</value>
    </filters>
    <label>NA: Acct MaintenancePendingACRs</label>
    <sharedTo>
      <group>NA_Account_Maintenance_Team</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Acct_Requests_NOT_YET_SUBMITTED</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Identity_Management_Notes_on_Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>notEqual</operation>
      <value>Submitted,Processing,Completed,Rejected</value>
    </filters>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>USA,Canada</value>
    </filters>
    <label>NA: Acct Requests NOT YET SUBMITTED</label>
    <sharedTo>
      <roleAndSubordinates>NA_CRM_Analyst</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All_Rejected_Account_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Identity_Management_Notes_on_Account__c</columns>
    <columns>Request_Type__c</columns>
    <columns>StreetAddress__c</columns>
    <columns>City__c</columns>
    <columns>State_Province__c</columns>
    <columns>Postal_Zip_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Rejected</value>
    </filters>
    <label>All Rejected Account Requests</label>
    <sharedTo>
      <roleAndSubordinates>NA_CRM_Analyst</roleAndSubordinates>
      <territoryAndSubordinates>Global_Setup.North_America</territoryAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BR_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Changed_Account_Name__c</columns>
    <columns>Changed_Address__c</columns>
    <columns>Changed_Phone__c</columns>
    <columns>Changed_Specialty__c</columns>
    <columns>Changed_Account_Type__c</columns>
    <filterScope>Queue</filterScope>
    <label>BR Account Maintenance Team</label>
    <queue>BR_Account_Maintenance_Team</queue>
    <sharedTo>
      <group>BR_Account_Maintenance_Team</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BeNeLux_AccountMaintTeam_Account_Create_Change_Request</fullName>
    <booleanFilter>(1 OR 3 or 4 OR 5 OR 6) AND 2</booleanFilter>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Creator_Country__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>Holland,Belgium,luxembourg</value>
    </filters>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Submitted,Processing</value>
    </filters>
    <filters>
      <field>AccountCountry__c</field>
      <operation>equals</operation>
      <value>BE,LU,NL</value>
    </filters>
    <filters>
      <field>Old_AccountCountry__c</field>
      <operation>equals</operation>
      <value>BE</value>
    </filters>
    <filters>
      <field>Old_AccountCountry__c</field>
      <operation>equals</operation>
      <value>LU</value>
    </filters>
    <filters>
      <field>Old_AccountCountry__c</field>
      <operation>equals</operation>
      <value>NL</value>
    </filters>
    <label>BeNeLux Account Maintenance Team</label>
    <sharedTo>
      <role>Benelux_CRM_Analyst</role>
      <role>Benelux_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Completed_Account_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Created_by_SBU__c</columns>
    <columns>Created_By_TERR_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Completed</value>
    </filters>
    <label>Completed Account Requests</label>
    <sharedTo>
      <role>NA_CRM_Analyst</role>
      <roleAndSubordinates>DNA_Shared_Services</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>DACH_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
    <columns>NAME</columns>
    <columns>Creator_Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>CimId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Changed_Account_Name__c</columns>
    <columns>Changed_Address__c</columns>
    <columns>Changed_Phone__c</columns>
    <columns>Changed_Specialty__c</columns>
    <columns>Changed_Account_Type__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Submitted</value>
    </filters>
    <label>DACH: Account Maintenance Team</label>
    <language>en_US</language>
    <queue>DACH_Account_Maintenance_Team</queue>
    <sharedTo>
      <group>D_A_CH_Account_Maintenance_Team</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>DK_Pending_Account_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>Denmark</value>
    </filters>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Submitted,Processing</value>
    </filters>
    <label>DK Pending Account Requests</label>
    <language>en_US</language>
    <sharedTo>
      <role>Nordics_CRM_Analyst</role>
      <role>Nordics_Shared_Service</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>ENDO_NA_Acct_Requests_NOT_YET_SUBMITTED</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Identity_Management_Notes_on_Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>notEqual</operation>
      <value>Submitted,Processing,Completed,Rejected</value>
    </filters>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>USA,Canada</value>
    </filters>
    <filters>
      <field>Created_by_SBU__c</field>
      <operation>equals</operation>
      <value>ENDO</value>
    </filters>
    <label>ENDO Acct Requests NOT YET SUBMITTED</label>
    <sharedTo>
      <role>NA_Customer_Service_Endo</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>FI_Pending_Account_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Creator_Country__c</field>
      <operation>equals</operation>
      <value>Finland</value>
    </filters>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Submitted,Processing</value>
    </filters>
    <label>FI Pending Account Requests</label>
    <language>en_US</language>
    <sharedTo>
      <role>Nordics_CRM_Analyst</role>
      <role>Nordics_Shared_Service</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>FR_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
    <columns>NAME</columns>
    <columns>Creator_Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CimId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Changed_Account_Name__c</columns>
    <columns>Changed_Address__c</columns>
    <columns>Changed_Phone__c</columns>
    <columns>Changed_Specialty__c</columns>
    <columns>Changed_Account_Type__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Submitted,Processing</value>
    </filters>
    <label>FR: Account Maintenance Team</label>
    <language>en_US</language>
    <queue>FR_Account_Maintenance_Team</queue>
    <sharedTo>
      <group>FR_Account_Maintenance_Team</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Hong_Kong_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Hong Kong: Account Maintenance Team</label>
    <queue>Hong_Kong_Account_Maintenance_Team</queue>
    <sharedTo>
      <roleAndSubordinatesInternal>HK_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
</CustomObject>